# rs-hypergraphsql

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
migrations/: 20241117224814_init.down.sql  20241117224814_init.up.sql
src/: hypergraph.rs  lib.rs  prelude.rs
src/core/: database.rs
src/model/: edge.rs  mod.rs  node.rs  node_edge.rs
src/query/: builder.rs  mod.rs  query.rs
src/repo/: edge.rs  mod.rs  node.rs  node_edge.rs
tests/: prelude.rs  test.rs
